Fixed Z-index for Calendar on Responsive

--- a/src/App.css
+++ b/src/App.css
@@ -208,6 +208,8 @@ li a {
 }
 
 .calendar_content{
+  position: relative;
+  z-index: 0;
   flex: 1;
   padding: 20px;
 }
